CS35L/Lab3/hw3.txt
1.) In ls.c, the block of code with the conditional that leads to
"goto case_long_iso_time_style;" is taken out. The "case" will print out the
date in the bugged format, but taking out the first patch around line ~2014
is not completely necessary, as the case will never occur.



2.) As mentioned in Brady's notes that came with the patch, the problem with
this patch is that the dates are read in different formats in different
countries. In the original ls, the date is set to ISO format, and is taken
to be better understood worldwide. Setting the ls command to only display the
date in POSIX format will cause problems for non-English speakers, and
translating int different formats will also be a problem.



3.) When invoked with an empty file, the script will cause an error.
Because the file is empty, the script cannot choose a proper line as
the bit size is zero.
(The output is listed below.)

Traceback (most recent call last):
  File "/usr/local/cs/Python-3.4.3/lib/python3.4/random.py", line 253, in choice
    i = self._randbelow(len(seq))
  File "/usr/local/cs/Python-3.4.3/lib/python3.4/random.py", line 230, in _randbelow
    r = getrandbits(k)          # 0 <= r < 2**k
ValueError: number of bits must be greater than zero

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "randline.py", line 69, in <module>
    main()
  File "randline.py", line 64, in main
    sys.stdout.write(generator.chooseline())
  File "randline.py", line 34, in chooseline
    return random.choice(self.lines)
  File "/usr/local/cs/Python-3.4.3/lib/python3.4/random.py", line 255, in choice
    raise IndexError('Cannot choose from an empty sequence')
IndexError: Cannot choose from an empty sequence



4.) Running randline.py with python3 will raise a syntax error.
  File "randline.py", line 65
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax

This is because in Python3, tuple parameter unpacking was removed (which was
present in\ Python2). The syntax for the except block has changed as a result,
which should be in the format

except IOError as x:
    except IOError as (x.errno, x.strerror):

where x is a variable for representing the IOError object.
 

